--- a/server/pom.xml
+++ b/server/pom.xml
@@ -65,6 +65,18 @@
       <version>1.9.6</version>
     </dependency>
 
+    <!--security 依赖-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+    <!--JWT 依赖-->
+
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt</artifactId>
+      <version>0.9.0</version>
+    </dependency>
   </dependencies>
 
 
